--- a/aws-website.nosync/my-music/src/index.css
+++ b/aws-website.nosync/my-music/src/index.css
@@ -27,3 +27,9 @@ audio {
 button {
   border-radius: 10px;
 }
+
+.musicPlayer {
+  color: #ddd;
+  border: 3px solid #00695c;
+  border-radius: 10px;
+}
